# MyHex

./: .gitignore  CMakeLists.txt  MyHex.cpp  README.md
.claude/: settings.local.json
src/: dump.cpp  dump.hpp  main.cpp  opts.cpp  opts.hpp  render.cpp  render.hpp  term.cpp  term.hpp  util.hpp  viewer.cpp  viewer.hpp
